k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dz3
  labels:
    app: dz3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dz3
  template:
    metadata:
      labels:
        app: dz3
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
      - name: dz3
        image: dubec/home_works:dz6_v02
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health/
            port: 8000
          successThreshold: 1
---
kind: Service
apiVersion: v1
metadata:
  name: dz3-service
spec:
  selector:
    app: dz3
  ports:
    - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz3-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health/
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /otusapp/(.*)/(.*) 
#            path: /health(/|$)(.*)
            backend:
              service:
                name: dz3-service
                port:
                  number: 8000
          - pathType: Prefix
            path: /health(/|$)(.*)
            backend:
              service:
                name: dz3-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz3-users-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /users(/|$)(.*)
            backend:
              service:
                name: dz3-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz3-orders-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /orders(/|$)(.*)
            backend:
              service:
                name: dz3-service
                port:
                  number: 8000
